apps/apps/dev/tekton/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton
  namespace: tekton-pipelines
spec:
  ingressClassName: nginx
  rules:
  - host: tekton.${INTERNAL_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: tekton-dashboard
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - tekton.${INTERNAL_DOMAIN}
  - secretName: tekton-tls-internal
